# pdi-image-processor

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/gui/: run.py
backend/image_processor/: __init__.py  intensity.py  main.py  output.py  run.py
backend/image_processor/core/: filtering.py  intensity.py  kernels.py  sampling.py
backend/image_processor/imgio/: __init__.py
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/Canvas/: index.js
frontend/src/components/MenuBar/: index.js
frontend/src/services/: api.js  imageUpload.js
frontend/src/styles/: index.css
gui/: inputs.py  run.py
image-processor/: main.py
image_processor/: __init__.py  run.py
image_processor/core/: filtering.py  intensity.py  kernels.py
image_processor/decompr/: bmp_header.txt  constants.py  huffman.py  img_parser.py  lzw.py
image_processor/imgio/: __init__.py
