[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tales Araujo <talesaraujodossantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
fastapi = "^0.70.0"
opencv-python = "^4.5.4"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-multipart = "^0.0.5"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
